<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isistemas.umariana.edu.co.zonaswifigratisparalagente.Inicio">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/app_name"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/portada"
            app:layout_collapseMode="parallax" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/encuentra"
            android:textSize="18sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="like.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/recuerda" />
    </RelativeLayout>

</FrameLayout>
