<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo2"
    tools:context="isistemas.umariana.edu.co.zonaswifigratisparalagente.DetallesFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/transparenciaOscura">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:drawableLeft="@drawable/ic_wifi_white_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_wifi_white_24dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:text="NOMBRE"
                        android:textColor="#ffffff"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:drawableLeft="@drawable/ic_star_border_white_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_star_border_white_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/departamento2"
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/departamento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="departamento"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:drawableLeft="@drawable/ic_star_white_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_star_white_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/municipio2"
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/municipio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="municipio"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:drawableLeft="@drawable/ic_local_florist_white_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_local_florist_white_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/region2"
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="Región"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:drawableLeft="@drawable/ic_directions_white_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_directions_white_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/direccion2"
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/direccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="Direccion"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:drawableLeft="@drawable/ic_directions_white_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_directions_white_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/estado2"
                        android:textColor="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/estado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="si"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
